--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,5 @@
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   background-color: #bdd4e7;
@@ -18,5 +19,43 @@ body {
 .form-wrapper {
   width: 300px;
   margin: 0 auto;
+}
+
+#message {
+  width: 80vw;
+  height: 40px;
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding: 10px;
+  background-color: aqua;
+  border: 2px solid #111;
+  z-index: 10;
+  text-align: center;
+  border-radius: 20px;
+  -webkit-animation: vanish 3s linear;
+          animation: vanish 3s linear;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes vanish {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes vanish {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 /*# sourceMappingURL=app.css.map */
