--- a/css/app.scss
+++ b/css/app.scss
@@ -1,18 +1,24 @@
+* {
+  box-sizing: border-box;
+}
 body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: #bdd4e7;
-  background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
+  background-color: #e9bcb7;
+  background-image: linear-gradient(315deg, #e9bcb7 0%, #29524a 74%);
 }
+
 .container {
   margin-top: 40px;
 }
+
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.6) !important;
   z-index: 4;
   border-radius: 40px;
 }
+
 .form-wrapper {
   width: 300px;
   margin: 0 auto;
